fixed ui of dashbord on mobile view

--- a/apps/web-giddh/src/app/home/components/total-overdues/total-overdues-chart.component.scss
+++ b/apps/web-giddh/src/app/home/components/total-overdues/total-overdues-chart.component.scss
@@ -63,7 +63,7 @@ span.icon-rupees {
     border-radius: 30px;
     border: 1px solid $gainsboro;
 }
-@media(max-width:414px){
+@media(max-width:480px){
     .dashboard-filter{
         display: flex;
         float: none !important;
